--- a/space-tourism/.vscode/settings.json
+++ b/space-tourism/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "todo-tree.tree.showBadges": true
+  "todo-tree.tree.showBadges": true,
+  "editor.bracketPairColorization.enabled": true,
+  "workbench.colorTheme": "Andromeda Bordered",
+  "workbench.preferredHighContrastColorTheme": "Andromeda Italic Bordered"
 }
